# MCP-connector

./: .env.example  Dockerfile  README.md  docker-compose.yml  nginx.example.conf  pyproject.toml
src/datalens_mcp/: __init__.py  client.py  config.py  dashboard.py  server.py
tests/: test_client.py  test_dashboard.py  test_server_import.py
