[project]
name = "datalens-mcp"
version = "0.1.0"
description = "MCP connector for Yandex DataLens"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
datalens-mcp = "datalens_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datalens_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
